k8s/1-client.pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: client-pod 
  labels: 
     component: web 
spec:
  containers: 
     - name: client 
       image: ahmedfarouk141414/multi-client:latest
       ports: 
          - containerPort: 3000 
---
####  vi client-node-port.yaml

apiVersion: v1
kind: Service 
metadata:
   name: client-node-port 
spec: 
   type: NodePort
   ports: 
     - port: 3050
       targetPort: 3000
       nodePort: 31515 
   selector: 
       component: web
