k8s/ingress-service.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
   # certmanager.k8s.io/cluster-issuer: 'letsencrypt-prod'
   # nginx.ingress.kubernetes.io/ssl-redirect: 'true'
spec:
  #tls:
  #  - hosts:
  #      - k8s-multi.com
  #      - www.k8s-multi.com
  #    secretName: k8s-multi-com
  rules:
   # - host: k8s-multi.com
     - http:
        paths:
          - path: /
            backend:
              serviceName: client-cluster-ip-service
              servicePort: 3000
          - path: /api/
            backend:
              serviceName: server-cluster-ip-service
              servicePort: 5000
   # - host: www.k8s-multi.com
   #   http:
   #     paths:
   #       - path: /
   #         backend:
   #           serviceName: client-cluster-ip-service
   #           servicePort: 3000
   #       - path: /api/
   #         backend:
   #           serviceName: server-cluster-ip-service
   #           servicePort: 5000
